# PyReduce

./: .coveragerc  .flake8  .gitattributes  .gitignore  .jsbeautifyrc  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  ANDES_plan.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  MANIFEST.in  Makefile  Pipfile  README.md  README_METIS.md  REDESIGN.md  Reduce.ipynb  WhatsNew.md  __init__.py  bezier.py  cffitest.py  cfuncs.c  charslit_plan.md  clipnflip.py  codemeta.json  colrange_mask.md  combine_bias.py  combine_frames.py  compile_clib.py  continuum.py  continuum_normalization.py  cwrappers.py  dev-requirements.txt  echelle.py  edps_generic_reduce.md  environment.yml  estimate_background_scatter.py  extract.py  (+40 more)
.github/workflows/: python-publish.yml
Slit_Func/: Makefile  makebin.pro  plot_model.py  rddump.pro  slit_func.c  slit_func.c.orig  slit_func.pro  slit_func_bd.c  slit_func_lapack.c
Test/: test_combine.py  test_extract.py
clib/: build_cluster.py  build_extract.py  build_slitfunc.py  cluster.c  cluster.h  slit_func_2d_xi_zeta_bd.c  slit_func_2d_xi_zeta_bd.h  slit_func_bd.c  slit_func_bd.h
docs/: Makefile  cli.md  conf.py  configuration_file.md  configuration_file.rst  examples.md  examples.rst  fiber_bundle_tracing.md  fiber_layout_specification.md  fibers_by_channel.md  howto.md  howto.rst  index.md  index.rst  installation.md  installation.rst  instruments.md  instruments.rst  make.bat  manual_calls.md  modules.rst  output_formats.md  pyreduce.clib.rst  pyreduce.instruments.rst  pyreduce.rst  redesign.md  requirements.txt  trace_fit_regularization.md  wavecal_linelist.md  wavecal_linelist.rst
edps_wkf/: __init__.py  parameters_config.yaml  reduce_classification.py  reduce_datasources.py  reduce_keywords.py  reduce_parameters.yaml  reduce_wkf.py
examples/: aj_example.py  aj_example_v2.py  andes_allbands.py  andes_compLSF.py  andes_extract_single.py  andes_riz.py  andes_tracecurve.py  andes_yjh.py  andes_yjh_example.py  andes_yjh_sampl.py  crires_lm.py  crires_plus_example.py  custom_instrument_example.py  datasets.py  debug_single_swath.py  harpn_example.py  harps_example.py  harps_gridsearch.py  hermes_example.py  just_one_swath.py  jwst_miri_example.py  jwst_niriss_example.py  lick_apf_example.py  mcdonald_example.py  metis_example.py  metis_ifu_example.py  metis_ifu_example_manual.py  metis_lss_example.py  micado_example.py  mosaic_example.py  mosaic_nir.py  mosaic_nir_starsky.py  mosaic_preset-slitfunc.py  mosaic_vis.py  neid_example.py  nirspec_example.py  sampl_iq15.py  settings_CRIRES_PLUS.json  settings_HARPS.json  settings_JWST_MIRI.json  (+8 more)
instruments/: common.py  harps.py  instrument_info.py  uves.py
jnotebook/: uves_example.ipynb
plots_for_paper/: dimensionality.py  settings_HARPS.json  wavecal_plot.py
pyreduce/: __init__.py  __main__.py  _version.py  cli.py  clipnflip.py  combine_frames.py  configuration.py  continuum_normalization.py  curvature_model.py  cwrappers.py  datasets.py  echelle.py  estimate_background_scatter.py  extract.py  extraction_height.py  extraction_width.py  fiber_processing.py  getxwd.py  make_shear.py  migration.py  normalize_flat.py  numba_extract.py  pipeline.py  rectify.py  reduce.py  slit_curve.py  slitfunc.py  spectra.py  trace.py  trace_model.py  trace_orders.py  util.py  wavelength_calibration.py
pyreduce/clib/: build_cluster.py  build_ext_hook.py  build_extract.py  cluster.c  cluster.h  slit_func_2d_xi_zeta_bd.c  slit_func_2d_xi_zeta_bd.h  slit_func_bd.c  slit_func_bd.h  slitdec.c  slitdec.h
pyreduce/instruments/: aj.py  aj.yaml  andes.json  andes.py  andes.yaml  common.json  common.py  crires_plus.json  crires_plus.py  crires_plus.yaml  filters.py  harpn.json  harpn.py  harpn.yaml  harpn_example.py  harps.json  harps.py  harps.yaml  instrument_info.py  instrument_schema.json  jwst_miri.json  jwst_miri.py  jwst_miri.yaml  jwst_niriss.json  jwst_niriss.py  jwst_niriss.yaml  lick_apf.json  lick_apf.py  lick_apf.yaml  mcdonald.json  mcdonald.py  mcdonald.yaml  metis.json  metis.py  metis_ifu.json  metis_ifu.py  metis_ifu.yaml  metis_lss.json  metis_lss.py  metis_lss.yaml  (+19 more)
pyreduce/settings/: settings_AJ.json  settings_ANDES.json  settings_CRIRES_PLUS.json  settings_HARPN.json  settings_HARPS.json  settings_JWST_MIRI.json  settings_JWST_NIRISS.json  settings_LICK_APF.json  (+13 more)
recipes/: __init__.py  reduce_bias.py
test/: conftest.py  test_bias.py  test_cli.py  test_clib_build.py  test_clipnflip.py  test_combine.py  test_configuration.py  test_continuum.py  test_cwrappers.py  test_echelle.py  test_extract.py  test_flat.py  test_instruments.py  test_mask.py  test_models.py  test_mosaic.py  test_normflat.py  test_numbaextract.py  test_orders.py  test_pipeline.py  test_reduce.py  test_scatter.py  test_science.py  test_shear.py  test_slit_curve.py  test_spectra.py  test_trace.py  test_trace_model.py  test_util.py  test_uves.py  test_wavecal.py
tools/: andes_hdf_to_wavecal.py  andes_plot_spectra.py  argon.line  bpm_creator.py  bundle_centers_semimanual.md  create_wavelength_guess.py  download_files.py  hdf2trace.py  make_notebook.py  mosaic_vis_bundle_plot.py  neon.lin  neon.line  plot_1d_vs_2d_extraction.py  plot_dual_beam.py  plot_extraction_comp.py  plot_extractmodel_comp.py  plot_swath_debug.py  pyesorex-wrapper.sh  pymultispec.py  thar.npz  wavecal_creator.py  wavecal_creator_from_existing.py  xshooter_nir.json
wheels/: build-wheels.sh  make.sh
(+220 files in other folders)
